--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@nuxtjs/tailwindcss": "^6.6.0",
     "@tailwindcss/typography": "^0.5.9",
     "nuxt": "^3.3.1"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.3.0"
   }
 }
